#8397 Souběžná změna revize, kroky 1-3
