# elza/elza-core/src/main/resources/rest/elza-openapi.yml
@@ -212,6 +212,41 @@ paths:
           description: Potvrzení o úspěšném odstranění
         404:
           description: AP neexistuje
+    put:
+      summary: Aktualizace přístupového bodu
+      operationId: updateAccessPoint
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        description: Upravovaná data přístupového bodu
+        content:
+          'application/json':
+            schema:
+              $ref: '#ApAccessPointEditVO'
+      responses:
+        200:
+          description: Aktualizovaný záznam
+          content:
+            application/json:
+              schema:
+                $ref: '#ApAccessPointVO'
+        404:
+          description: AP nebo revize neexistuje
   /accesspoints/{id}/autoitems:
     get:
       summary: Vrátí seznam automaticky generovaných prvků popisu
@@ -299,6 +334,198 @@ paths:
           description: Entita byla ověřena
         404:
           description: AP neexistuje
+  /accesspoints/{id}/state:
+    post:
+      summary: Změna stavu přístupového bodu
+      operationId: changeState
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        description: Nový stav přístupového bodu
+        content:
+          'application/json':
+            schema:
+              $ref: '#ApStateChangeVO'
+      responses:
+        200:
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
+        404:
+          description: AP nebo revize neexistuje
+  /accesspoints/{id}/part:
+    post:
+      summary: Založení nové části přístupového bodu
+      operationId: createPart
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        description: Data pro vytvoření části
+        content:
+          'application/json':
+            schema:
+              $ref: '#ApPartFormVO'
+      responses:
+        200:
+          description: Identifikátor vytvořené části + verze archivní entity
+          content:
+            application/json:
+              schema:
+                $ref: '#CreatedPart'
+        404:
+          description: AP nebo revize neexistuje
+  /accesspoints/{id}/part/{partId}:
+    post:
+      summary: Úprava části přístupového bodu
+      operationId: updatePart
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: partId
+          description: Identifikátor měněné části
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        description: Data pro měněné části
+        content:
+          'application/json':
+            schema:
+              $ref: '#ApPartFormVO'
+      responses:
+        200:
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
+        404:
+          description: AP neexistuje
+    delete:
+      summary: Smazání části přístupového bodu
+      operationId: deletePart
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: partId
+          description: Identifikátor mazané části
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      responses:
+        200:
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
+        404:
+          description: AP neexistuje
+  /accesspoints/{id}/part/{partId}/prefer-name:
+    put:
+      summary: Nastavení preferovaného jména přístupového bodu
+      operationId: setPreferName
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: partId
+          description: Identifikátor části, kterou nastavujeme jako preferovanou
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      responses:
+        200:
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
+        404:
+          description: AP neexistuje
   /accesspoints:
     delete:
       summary: Zneplatnění přístupovych bodu
@@ -367,6 +594,13 @@ paths:
           schema:
             type: integer
             format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
       requestBody:
         description: Nový stav revize
         content:
@@ -375,7 +609,12 @@ paths:
               $ref: '#/components/schemas/RevStateChange'
       responses:
         200:
-          description: Potvrzení o úspěšné změně stavu revize
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
         404:
           description: AP nebo revize neexistuje
   /revision/{id}/autoitems:
@@ -401,6 +640,49 @@ paths:
         404:
           description: AP neexistuje
   /revision/{id}/part/{partId}:
+    post:
+      summary: Úprava části přístupového bodu z revize
+      operationId: updateRevisionPart
+      tags:
+        - accesspoints
+      parameters:
+        - name: id
+          description: Identifikátor archivní entity
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: partId
+          description: Identifikátor části popisu
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        description: Data pro úpravu části
+        content:
+          'application/json':
+            schema:
+              $ref: '#ApPartFormVO'
+      responses:
+         200:
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
+         404:
+           description: AP nebo revize neexistuje
     delete:
       summary: Smazání části popisu z revize
       operationId: deleteRevisionPart
@@ -421,9 +703,21 @@ paths:
           schema:
             type: integer
             format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
       responses:
          200:
-           description: Potvrzení o úspěšném smažání částí popisu
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
          404:
            description: AP nebo revize neexistuje
   /revision/{id}/part/{partId}/prefer-name:
@@ -447,9 +741,21 @@ paths:
           schema:
             type: integer
             format: int32
+        - name: apVersion
+          description: Aktuální verze archivní entity
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
       responses:
         200:
-          description: Potvrzení o úspěšném nastavení preferovaného jména
+          description: Aktualizované číslo verze archivní entity
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
         404:
           description: AP nebo revize neexistuje
   /daos/{id}/change-scenario:
@@ -1380,6 +1686,17 @@ components:
         - ACTIVE
         - TO_APPROVE
         - TO_AMEND
+    CreatedPart:
+      type: object
+      properties:
+        partId:
+          description: Identifikátor vytvořené částí archivní entity
+          type: integer
+          format: int32
+        apVersion:
+          description: Aktualizovaná verze archivní entity
+          type: integer
+          format: int32
     AutoValue:
       title: Jeden automaticky generovaný prvek popisu
       type: object
